use txtt for code examples

--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -76,7 +76,7 @@ and the derived files           pxpic.pdf
     ,flexiblecolumns=false
     ,basewidth=.53em
     ,gobble=2
-    ,basicstyle=\fontfamily{jkp}\itshape
+    ,basicstyle=\fontfamily{txtt}\selectfont
     ,morekeywords=^^A
       {^^A
         \pxpic,\pxpicsetup,\pxpicnewmode,\pxpicsetmode,\pxpicnewcolorlist,
