slightly improve example grid lines

--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -834,7 +834,7 @@ and the derived files           pxpic.pdf
 % \noindent
 % \codeexample$
 % \newcommand\gridpxpic[3][]
-%   {{\setlength\fboxsep{#2}\colorbox{black}{\pxpic[#1,gap-hack=-\fboxsep]{#3}}}}
+%   {{\setlength\fboxsep{#2}\colorbox{black}{\pxpic[gap-hack=-\fboxsep,#1]{#3}}}}
 % \gridpxpic
 %   [colours={g=green,w=white},size=8pt]
 %   {1pt}
