fix logo usage and a small typos

--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -775,7 +775,7 @@ and the derived files           pxpic.pdf
 % Ideas, Undefined behaviours'' section of \pixelart's documentation for the
 % syntax of |mode=px|. Also the |lines=space| option is a copy of the syntax the
 % new stable version of \pixelart\ is using (so images created with it could be
-% processed with \pkg{pxpic} and vice versa). A third package that allows
+% processed with \pxpicname\ and vice versa). A third package that allows
 % drawing pixel art is \pkg{PixelArtTikz}, that uses a csv-syntax for its pixel
 % definition lists (you may have luck and the mode |lines=csv| works for lists
 % defined for \pkg{PixelArtTikz}).
@@ -783,7 +783,7 @@ and the derived files           pxpic.pdf
 % \paragraph{Regarding the gap issue:}
 % The pixels are output touching each other with no real gap, however some
 % \textsc{pdf} viewers and tools will display such a gap. To make things even
-% worse, the effect depends on the viewers current magnification.
+% worse, the effect depends on the viewers' current magnification.
 % \pxpicname\ has the |gap-hack| option to provide some crude hack that might
 % fix the issue, at the cost that the pixels on the far right and bottom are
 % bigger than they were specified to be. Also pixels next to skipped pixels have
