Missing third choice in code explanation added

--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -1268,8 +1268,8 @@ and the derived files           pxpic.pdf
 %   \CS{pxpic@parse}, that'll set things up with the end marker for the row
 %   parser \CS{pxpic@@parse}. Both the definition of \CS{pxpic@parse} and
 %   \CS{pxpic@@parse} is dependent on the setting of the |lines| key, hence they
-%   are set up with the two macros \CS{pxpic@@parse@group} and
-%   \CS{pxpic@@parse@space} that represent the choices of said key.
+%   are set up with the macros \CS{pxpic@@parse@group}, \CS{pxpic@@parse@space}
+%   and \CS{pxpic@@parse@csv} that represent the choices of said key.
 %    \begin{macrocode}
 \protected\def\pxpic@parse@setarg#1#2%
   {%
